--- a/strand/iOS/Strand/Strand/DFNoIncomingViewController.xib
+++ b/strand/iOS/Strand/Strand/DFNoIncomingViewController.xib
@@ -21,7 +21,7 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="C3p-V0-JPw" secondAttribute="trailing" constant="8" id="4Fv-0J-Ulu"/>
                 <constraint firstItem="C3p-V0-JPw" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="200" id="PYa-Wt-oSv"/>
