--- a/strand/iOS/Strand/Strand/DFPhotosPermissionViewController.xib
+++ b/strand/iOS/Strand/Strand/DFPhotosPermissionViewController.xib
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFPhotosPermissionViewController">
             <connections>
+                <outlet property="imageView" destination="JU1-qK-iVT" id="Gme-N6-EPr"/>
                 <outlet property="learnMoreButtonPressed" destination="TOc-TO-Gbk" id="jMY-dm-iSL"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -16,28 +17,28 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Welcome to Swap" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vtd-FE-1Jp">
-                    <rect key="frame" x="36" y="47" width="249" height="24"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Swap" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vtd-FE-1Jp">
+                    <rect key="frame" x="74" y="47" width="172" height="24"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="deviceRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Swap your photos easily with friends. Please grant photos access to proceed." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="285" translatesAutoresizingMaskIntoConstraints="NO" id="3j1-n9-YIe">
-                    <rect key="frame" x="18" y="94" width="285" height="58"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="999" text="Swap makes it easy to share photos by matching photos you took with friends. Your photos won't be shared until you send them." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="285" translatesAutoresizingMaskIntoConstraints="NO" id="3j1-n9-YIe">
+                    <rect key="frame" x="24" y="94" width="273" height="77"/>
                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TOc-TO-Gbk">
-                    <rect key="frame" x="126" y="153" width="69" height="28"/>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TOc-TO-Gbk">
+                    <rect key="frame" x="126" y="175" width="69" height="28"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <state key="normal" title="Learn More">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Intro/LocationNUXGraphic.png" translatesAutoresizingMaskIntoConstraints="NO" id="JU1-qK-iVT">
-                    <rect key="frame" x="51" y="200" width="219" height="150"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Assets/Nux/PhotosAccessGraphic.png" translatesAutoresizingMaskIntoConstraints="NO" id="JU1-qK-iVT">
+                    <rect key="frame" x="51" y="203" width="219" height="150"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="219" id="2Wb-xh-XuN"/>
                         <constraint firstAttribute="height" constant="150" id="sOk-8y-VN3"/>
@@ -49,8 +50,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="2Tz-eK-448"/>
                     </constraints>
-                    <state key="normal" title="Grant Photos Access">
-                        <color key="titleColor" red="0.93333339689999995" green="0.40000003579999999" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                    <state key="normal" title="Match my Photos">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -61,23 +61,24 @@
             <color key="backgroundColor" red="0.97254908080000002" green="0.4156863093" blue="0.29019609089999998" alpha="1" colorSpace="deviceRGB"/>
             <constraints>
                 <constraint firstAttribute="centerX" secondItem="56U-G0-LkK" secondAttribute="centerX" id="0a0-cs-yhI"/>
-                <constraint firstItem="JU1-qK-iVT" firstAttribute="top" secondItem="TOc-TO-Gbk" secondAttribute="bottom" constant="19" id="1Mr-4c-Jy5"/>
+                <constraint firstItem="JU1-qK-iVT" firstAttribute="top" secondItem="TOc-TO-Gbk" secondAttribute="bottom" id="1Mr-4c-Jy5"/>
                 <constraint firstAttribute="centerX" secondItem="3j1-n9-YIe" secondAttribute="centerX" id="1pL-7W-hQk"/>
                 <constraint firstAttribute="bottom" secondItem="56U-G0-LkK" secondAttribute="bottom" constant="47" id="EbQ-wA-DMv"/>
                 <constraint firstAttribute="trailing" secondItem="56U-G0-LkK" secondAttribute="trailing" constant="60" id="FGv-OC-ujp"/>
                 <constraint firstAttribute="centerX" secondItem="TOc-TO-Gbk" secondAttribute="centerX" id="Jbx-l6-ML9"/>
                 <constraint firstAttribute="centerX" secondItem="JU1-qK-iVT" secondAttribute="centerX" id="OTJ-hW-kdn"/>
-                <constraint firstItem="TOc-TO-Gbk" firstAttribute="top" secondItem="3j1-n9-YIe" secondAttribute="bottom" constant="1" id="SL2-eP-KIH"/>
+                <constraint firstItem="TOc-TO-Gbk" firstAttribute="top" secondItem="3j1-n9-YIe" secondAttribute="bottom" constant="4" id="SL2-eP-KIH"/>
                 <constraint firstItem="56U-G0-LkK" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="Ymb-c1-m5j"/>
                 <constraint firstItem="3j1-n9-YIe" firstAttribute="top" secondItem="Vtd-FE-1Jp" secondAttribute="bottom" constant="23" id="aQy-yy-TE0"/>
                 <constraint firstAttribute="centerX" secondItem="Vtd-FE-1Jp" secondAttribute="centerX" id="t0h-wy-ktB"/>
                 <constraint firstItem="Vtd-FE-1Jp" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="47" id="zIg-dE-UNP"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="149" y="299"/>
         </view>
     </objects>
     <resources>
-        <image name="Assets/Intro/LocationNUXGraphic.png" width="16" height="16"/>
+        <image name="Assets/Nux/PhotosAccessGraphic.png" width="16" height="16"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
