Add a matched photos nux

--- a/strand/iOS/Strand/Strand/DFSuggestionContentView.xib
+++ b/strand/iOS/Strand/Strand/DFSuggestionContentView.xib
@@ -51,6 +51,7 @@
                 <constraint firstItem="wuM-t7-6bp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="9dl-ak-WHT"/>
                 <constraint firstAttribute="centerX" secondItem="7AH-le-Yhh" secondAttribute="centerX" id="ENJ-Rp-XJg"/>
                 <constraint firstItem="z8y-4t-v0a" firstAttribute="leading" secondItem="5G5-OR-sYm" secondAttribute="trailing" constant="8" id="FYF-aC-ONm"/>
+                <constraint firstItem="7AH-le-Yhh" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" priority="800" id="Gda-rg-tme"/>
                 <constraint firstItem="7AH-le-Yhh" firstAttribute="top" secondItem="5G5-OR-sYm" secondAttribute="bottom" constant="8" id="JPR-p0-arS"/>
                 <constraint firstItem="5G5-OR-sYm" firstAttribute="centerX" secondItem="wuM-t7-6bp" secondAttribute="centerX" id="LC6-rI-4hZ"/>
                 <constraint firstItem="wuM-t7-6bp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="N5e-ez-FKR"/>
