--- a/strand/iOS/Strand/Strand/DFSuggestionContentView.xib
+++ b/strand/iOS/Strand/Strand/DFSuggestionContentView.xib
@@ -16,6 +16,7 @@
                     <rect key="frame" x="275" y="37" width="50" height="50"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="3SX-co-lap"/>
                         <constraint firstAttribute="width" priority="1" constant="50" id="JuJ-hI-cdj"/>
                         <constraint firstAttribute="height" constant="50" id="YQa-HN-EEQ"/>
                     </constraints>
