--- a/strand/iOS/Strand/Strand/DFUpsellCardViewController.xib
+++ b/strand/iOS/Strand/Strand/DFUpsellCardViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6254"/>
     </dependencies>
     <objects>
@@ -16,14 +17,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C3p-V0-JPw" customClass="DFSwipableButtonView">
-                    <rect key="frame" x="8" y="200" width="584" height="400"/>
+                    <rect key="frame" x="8" y="60" width="584" height="540"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="C3p-V0-JPw" secondAttribute="trailing" constant="8" id="4Fv-0J-Ulu"/>
-                <constraint firstItem="C3p-V0-JPw" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="200" id="PYa-Wt-oSv"/>
+                <constraint firstItem="C3p-V0-JPw" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="60" id="PYa-Wt-oSv"/>
                 <constraint firstItem="C3p-V0-JPw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="bKl-jq-8VR"/>
                 <constraint firstAttribute="bottom" secondItem="C3p-V0-JPw" secondAttribute="bottom" id="e1E-ZJ-TdG"/>
             </constraints>
